adjust swagger et.al. to correctly specify parameters for quartiles
